[package]
name = "star-realms"
version = "0.1.0"
authors = ["Daniel P <daniel@pont.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
thiserror = "1.0"
log = "0"
tokio = { version = "1.7.0", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0"
dotenv = "0.15.0"