[package]
name = "star-realms-rs"
version = "0.1.2"
authors = ["Daniel P <daniel@pont.in>"]
edition = "2018"
description = "Library to read Star Realms PC/Mobile game API"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daniel-tp/star-realms-rs"
repository = "https://github.com/daniel-tp/star-realms-rs"
readme = "README.md"
keywords = ["api"]
categories = ["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
log = "0.4"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
env_logger = "0.8"
dotenv = "0.15"
tokio = { version = "1.7", features = ["macros"] }